[tool.poetry]
name = "ai-firewall"
version = "0.1.0"
description = ""
authors = ["sigurn  <50468602+sigurn2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
